--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 
 <p>
 <br/>
-<br/>
 
-Ig Repost is the most easier app to repost photos and videos on Instagram!
-
-<br/>
-<br/>
-
-If you have any questions , please contact usContact us.<br/>
+If you have any questions or suggestion, please contact us.<br/>
 Email:Igreposttohelp@gmail.com
 
 <br/>
