--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <p>
 <br/>
 
-If you have any questions or suggestion, please contact us.<br/>
-Email:Igreposttohelp@gmail.com
+If you have any questions or suggestions, please contact us.<br/>
+<br/>
+Email:igreposttohelp@gmail.com
 
 <br/>
 </p>
